--- a/elestio.yml
+++ b/elestio.yml
@@ -31,7 +31,7 @@ lifeCycleConfig:
   postRestoreCommand: "./scripts/postRestore.sh"
   postDeployCommand: "./scripts/postDeploy.sh"
 webUI:
-  - url: "https://[CI_CD_DOMAIN]/admin"
+  - url: "https://[CI_CD_DOMAIN]"
     label: "Memos Admin"
-    login: "root"
+    login: "admin"
     password: "[ADMIN_PASSWORD]"
